--- a/BloodPressureMonitor/MonoBPMonitor/src/MonoBPMonitor/app.config
+++ b/BloodPressureMonitor/MonoBPMonitor/src/MonoBPMonitor/app.config
@@ -3,8 +3,11 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="MonoBPMonitor.Properties.Settings.BPMonitorConnectionString"
-            connectionString="data source=&quot;C:\Documents and Settings\ayork\My Documents\SharpDevelop Projects\MonoBPMonitor\src\MonoBPMonitor\data\BPMonitor.s3db&quot;"
-            providerName="System.Data.SQLite" />
+		<!-- Don't show any update elements -->
+    	<!-- Useful for Linux packagers who need control over updates -->
+        <add key="ShowUpdate" value="True" />
+    	<!-- If true the program will allow the use of custom gtkrc files -->
+    	<!-- Many developers feel a program should not interfere with a users themes -->
+		<add key="AllowCustomTheme" value="True" />
     </connectionStrings>
 </configuration>
