--- a/BloodPressureMonitor/MonoBPMonitor/src/MonoBPMonitor/app.config
+++ b/BloodPressureMonitor/MonoBPMonitor/src/MonoBPMonitor/app.config
@@ -3,10 +3,10 @@
 	<appSettings>
 		<!-- Don't show any update elements -->
     	<!-- Useful for Linux packagers who need control over updates -->
-        <add key="ShowUpdate" value="true" />
+        <add key="ShowUpdate" value="false" />
     	<!-- If true the program will allow the use of custom gtkrc files -->
     	<!-- Many developers feel a program should not interfere with a users themes -->
-		<add key="AllowCustomTheme" value="true" />
+		<add key="AllowCustomTheme" value="false" />
 		<!-- Used for debugging -->
 		<add key="UseDebug" value="false"/>
     </appSettings>
